# gm-solana-simulator

./: Cargo.toml  README.md  check_discriminator.rs  constants.rs  discriminator.rs  lib.rs  mint_instruction.rs  parser.rs  simulator.rs  types.rs
.github/workflows/: integration-tests.yml  unit-tests.yml
tests/: simulation_test.rs
