[package]
name = "gm-solana-simulator"
version = "0.1.0"
edition = "2021"
description = "Generate mock GM mint transactions for bundle simulation with Jupiter RFQ"
license = "MIT"
repository = "https://github.com/ondoprotocol/gm-solana-simulator"

[lib]
path = "lib.rs"

[dependencies]
solana-sdk = "1.18"
spl-token-2022 = "1.0"
spl-associated-token-account = "2.3"
borsh = "1.3"
thiserror = "1.0"
bs58 = "0.5"
sha2 = "0.10"

[dev-dependencies]
tokio = { version = "1.35", features = ["full"] }
solana-client = "1.18"
solana-transaction-status = "1.18"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
base64 = "0.21"
spl-token = "4.0"

[features]
default = []
